# omitme

./: CHANGELOG  LICENSE  README.md  pyproject.toml
.github/workflows/: production.yml
omitme/: __init__.py  __main__.py  app.py  errors.py
omitme/cli/: __init__.py
omitme/gui/: app.py
omitme/util/: accounts.py  events.py  platform.py  targets.py  wait_for.py
